<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTTPServer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn1_text">Start HTTP Server</string>
    <string name="btn2_text">Stop HTTP Server</string>
    <string name="thrd_num_text">Max. Threads: </string>
    <string name="checkbox">Save image to SD card</string>
    <string name="notfication">HTTP Server is running!</string>
    <string name="server_not_running">Server is not running</string>
    <string name="server_running">Server is running</string>
</resources>