<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2_text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/thrd_num_text"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/threadsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="5"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/server_not_running"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/logList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>